changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Remove ltostr10 and doubletostr10. They were using static buffer, and
are nicely replaced by stringbuffer_append_printf() or snprintf().
 common/loader.l object.c porting.c
 include/libproto.h
 server/time.c
 test/unit/common/check_loader.c
Nicolas Weeger, 2008-02-17

Unit test for get_ob_diff().
 test/unit/common/check_loader.c
 test/unit/common/Makefile.am
Nicolas Weeger, 2008-02-17

Tileset support, through '-tileset=' option. Default 'standard' tileset.
utils/mapper.c
Nicolas Weeger, 2008-02-16

Remove left-over from weather code.
 common/map.c utils.c
 include/map.h plugin.h sproto.h
 plugins/cfpython/include/cfpython_map_private.h
 plugins/cfpython/cfpython_map.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/c_misc.c init.c plugins.c weather.c
Nicolas Weeger, 2008-02-16

Fix various warnings, remove unused variables/code.
 common/button.c languages.c
 server/attack.c c_misc.c spell_util.c
 socket/request.c sounds.c
 types/gate/gate.c
Nicolas Weeger, 2008-02-14

Add 'race_restriction' key/value field, that enables to restrict an item
to being appliable only for certain races.
 doc/Developers/objects
 server/apply.c
Nicolas Weeger, 2008-02-14

Remove unused functions.
 common/porting.c
 include/libproto.h
Nicolas Weeger, 2008-02-13

Better tiled maps handling. Now tiled maps are considered as one map, and
all links will point to the group.
 utils/mapper.c
Nicolas Weeger, 2008-02-13

Kind of update a few things.
 doc/handbook.ps
 doc/playbook/appA.tex chap3.tex
Nicolas Weeger, 2008-02-09

Fix broken pics.
 doc/playbook/items-extract